<resources>
    <string name="my_app">Assignment 1</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="login_text">Login</string>
    <string name="hint_email">Enter your email</string>
    <string name="password_label">password</string>
    <string name="hint_password">Enter your password</string>
    <string name="option_1">Option 1</string>
    <string name="check_me">Exit Activity?</string>
    <string name="what_does_this_do">What does this do?</string>
    <string name="camera_button">Open camera</string>
    <string name="dialog_message">Do you really want to exit this activity?</string>
    <string name="dialog_title">Exit Confirmation</string>
    <string name="ok">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="switch_on">Switch is On</string>
    <string name="switch_off">Switch is Off</string>
    <string name="no_camera_found">No camera app found</string>
    <string name="result_message">ListItemsActivity passed: My information to share</string>
    <string name="start_chat">Start Chat</string>
    <string name="send">Send</string>
    <string name="type_message">Type Message</string>
    <string name="sample_message">Sample Message</string>
    <string name="icon_desc">This is an Icon</string>
    <string name="test_toolbar">Test Toolbar</string>





</resources>