<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:id="@+id/main"
    android:background="@color/white"
    android:columnCount="2"
    android:rowCount="2"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_row="0"
        android:text="Item 1" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_row="0"
        android:text="Item 2" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_row="1"
        android:text="Item 3" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_row="1"
        android:text="Item 4" />

    <CheckBox
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="fill"
        android:text="@string/check_me" />

    <!-- 3. Switch -->
    <Switch
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_columnWeight="1"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="fill"
        android:text="@string/what_does_this_do" />

    <!-- 4. ImageButton -->
    <ImageButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="fill"
        android:src="@android:drawable/ic_menu_camera"
        android:contentDescription="@string/camera_button" />
</GridLayout>
